<resources>
    <string name="app_name">RememberMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch">Switch</string>

    <string name="enabled">Toolbar enabled</string>
    <string name="disabled">Toolbar disabled</string>

    <string name="time_format">HH:mm</string>


    <string name="skip">Skip</string>
    <string name="set_up">Set up</string>
    <string name="restart_now">Restart now</string>

    <string name="empty_list_title">У Вас нет текущих напоминаний</string>
    <string name="empty_list_text">Для создания нового списка напоминаний, нажмите на кнопку снизу</string>


    <string name="reps_key">reps_key</string>
    <string name="reps_default">5</string>

    <string name="start_time_key">start_time_key</string>
    <string name="start_time_title">Начало</string>
    <string name="start_time_summary">Первая точка в %1$s</string>

    <string name="stop_time_key">stop_time_key</string>
    <string name="stop_time_title">Конец</string>
    <string name="stop_time_summary">Последняя точка в %1$s</string>
    <string name="stop_time_default">23:59</string>

    <string name="preferences_reps_category">Повторения</string>
    <string name="preferences_time_category">Время</string>
    <string name="preferences_tools_category">Инструменты</string>

    <!-- The button label for saving an event -->
    <string name="save_label">Done</string>
    <!-- The button label for discarding changes to an event -->
    <string name="discard_label">Cancel</string>

</resources>
